Update app logs fetching with offset
LMCROSSITXSADEPLOY-2702